rotation matrix and project page

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r79/three.min.js"></script>
         <div class="scrollable">
             <div class="image-container">
-                <img src="./images/stemlong.png" alt="" class="logo" id="stem">
+                <img src="./images/stemlong.png" alt="" class="stem" id="stem">
                 <img src="./images/dfnr.png" alt="" class="mesh dfnr">
             </div>
             <div class="columns">
@@ -29,12 +29,11 @@
                 </p>
                 <div class="column">
                     <img src="./images/Keiichi Profile Pic.jpg" class="mesh name">
-                    <img src="./images/Keiichi domestic robocop.jpg" class="mesh meshimg staticimg right">
-                    <img src="./images/Keiichi title.png" class="mesh meshimg staticimg right front">
-
+                    <img src="./images/hyper.jpeg" class="mesh right">
+                    <img src="./images/Keiichi title.png" class="mesh right name front">
                 </div>
                 <div class="column">
-                    <img src="./images/Keiichi merger wide.png" class="mesh meshimg staticimg">
+                    <img src="./images/Keiichi merger wide.png" class="mesh">
                 </div>
             </div>
             <div class="columns">
@@ -46,12 +45,12 @@
                 <div class="column">
                     <img src="./images/Jasper title.png" class="mesh name front">
 
-                    <img src="./images/Jasper Profile Pic.jpg" class="mesh meshimg staticimg right">
-                    <img src="./images/Jasper Hand Sketches.png" class="staticimg mesh">
+                    <img src="./images/Jasper Profile Pic.jpg" class="mesh right">
+                    <img src="./images/Jasper Hand Sketches.png" class="mesh">
 
                 </div>
                 <div class="column">
-                    <img src="./images/Jasper hand cut out transparent bg.png" class="mesh meshimg right staticimg">
+                    <img src="./images/Jasper hand cut out transparent bg.png" class="mesh right">
                 </div>
             </div>
             
